# deeplenstronomy

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  _config.yml  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: paper.bib  test.yml
2dpdfs/: 2dg_CFHT.pkl  2dg_DES.pkl  2di_CFHT.pkl  2di_CFHT.txt  2di_DES.pkl  2di_DES.txt  2dr_CFHT.pkl  2dr_DES.pkl
Notebooks/: ActiveUpdateDemo.ipynb  BackgroundsDemo.ipynb  ConfigFiles.md  Cosmology.ipynb  DeepLenstronomyDemo.html  DeepLenstronomyDemo.ipynb  FullExample.html  GettingStarted.ipynb  Metrics.html  README.md  Surveys.html  TimeSeriesDemo.html  UserDistributions.ipynb
Untitled Folder/: Untitled.ipynb
archived_distributions/: ARCHIVED.MD
deeplenstronomy/: README.md  __init__.py  check.py  deeplenstronomy.py  distributions.py  image_generator.py  initital_data_settings.py  input_reader.py  settings.py  special.py  surveys.py  timeseries.py  utils.py  visualize.py
deepquasar_temp/: SImulation_full_pipeline_double_quad_non_lens.ipynb  Simulation_gal_gal.ipynb  distributions.py  galaxy_params.npy  run_simulator.py  simulation_for_lensed_AGN_full_bands.ipynb  yaml_playground.ipynb
docs/: check.html  conf.py  deeplenstronomy.html  distributions.html  image_generator.html  index.html  input_reader.html  surveys.html  timeseries.html  visualize.html
documentation/: AUTHORS.rst
notebooks/: LenspyDemo.ipynb
survey_characteristics/: g_CFHT.yaml
test/: Run_Tests.ipynb  config.yaml  debug_dl.ipynb  fake_config.yaml  prep.py  test_all.py  (+8 more)
(+150 files in other folders)
